A lot of configs changed an couple of files added.

--- a/.agignore
+++ b/.agignore
@@ -1,15 +1,27 @@
 .cache/
 cache/
 node_modules/
+_cacache/
+__pycache__/
 _*/
 *_/
 .git/
+.github/
 .cfg.git/
 buffers/
-.config/micro/backups/
-storage/shared/
-40E6-DFFD/.android_secure/
-.config/micro/plug/
+micro/backups/
+micro/plug/
+ranger/plugins/
+storage/shared/Android/
 Android/data/
+.android_secure/
+40E6-DFFD/.android_secure/
 vim-easycomplete/
 undo/
+specs/
+fonts/
+*pycache*/
+completions/
+.zsh/themes/
+pulse/
+servers/
