--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,13 @@
 # Colors
 # https://github.com/tmux/tmux/issues/1246:
 set -g  default-terminal "tmux-256color"
+# set -g  default-terminal "xterm-256color"
+# set -ga terminal-overrides ",*256col*:TC"
 set -ga terminal-overrides ",*256col*:RGB"
+
+# Cursor shape (ssh)
+# set -g  xterm-keys on
+# set -ga terminal-overrides ",screen*:Ss=^[[%p1%d q:Se=^[[2 q"
 
 # Set the base index for windows to 1 instead 0
 set -g  base-index 1
@@ -19,7 +25,7 @@ set -g  renumber-windows on
 
 # activity
 setw -g monitor-activity on
-set -g  visual-activity off
+set -g  visual-activity on
 
 # Window size and status
 setw -g aggressive-resize on
@@ -40,11 +46,7 @@ set -g  history-limit 5000
 set -g  display-time 3000
 set -g  display-panes-time 2000
 set -g  status-interval 5
-setw -g clock-mode-colour colour1
-
-# Cursor shape (ssh)
-# set -g  xterm-keys on
-# set -ga terminal-overrides ",screen*:Ss=^[[%p1%d q:Se=^[[2 q"
+setw -g clock-mode-colour colour4
 
 # Vim compatability
 set -sg escape-time 5 # fix vim esc delay
@@ -53,6 +55,7 @@ set -sg repeat-time 600
 ### Key bindings ###
 # Vi keys & copypaste mode
 setw -g mode-keys vi
+# set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # emacs keys in tmux command prompt (prefix + :)
 set -g  status-keys emacs
@@ -91,8 +94,8 @@ bind -r L resize-pane -R 2
 # maximize current pane
 bind + run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
 
-bind >    swap-pane -D
-bind <    swap-pane -U
+# bind >    swap-pane -D
+# bind <    swap-pane -U
 # bind <    swap-window -d -t -1 # -t :-
 # bind >    swap-window -d -t +1 # -t :+
 
@@ -193,9 +196,26 @@ setw -g window-status-activity-style "underscore,fg=#a89984,bg=#3c3836"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=#a89984,bg=#3c3836"
 set -g status-left "#[fg=#a89984,bg=#3c3836] #S:#P#[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#504945,bg=#3c3836,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#504945] Ctu:#{continuum_status} #[fg=#7c6f64,bg=#504945]#[bg=#7c6f64,fg=#32302f] %R "
+set -g status-right "#[fg=#504945,bg=#3c3836,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#504945] C:#{continuum_status} #[fg=#7c6f64,bg=#504945]#[bg=#7c6f64,fg=#32302f] %R "
 setw -g window-status-format "#[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]#[default] #I:#W #[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=#3c3836,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ebdbb2,bg=#504945] #I:#W #[fg=#504945,bg=#3c3836,nobold,nounderscore,noitalics]"
+
+TMUX_FZF_OPTIONS="-d 60% -m --preview-window 'down:50%:wrap:border'"
+# TMUX_FZF_PREVIEW=1
+TMUX_FZF_ORDER="session|pane|window|command|keybinding|process|clipboard"
+TMUX_FZF_PANE_FORMAT="[#{window_name}] #{pane_current_command} [#{pane_width}x#{pane_height}] #{?pane_active,[active],[inactive]}"
+TMUX_FZF_WINDOW_FORMAT="[#{window_name}] #{pane_current_command} [#{window_width}x#{window_height}] #{?window_active,[active],[inactive]}"
+TMUX_FZF_SESSION_FORMAT="[#{window_name}] #{pane_current_command} [#{session_windows} Windows] #{?pane_active,[active pane],[inactive pane]}"
+
+# plugin settings
+set -g @resurrect-dir '~/.config/tmux/resurrect'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
+#Restore all programs (dangerous!):
+# set -g @resurrect-processes ':all:'
+set -g @continuum-save-interval '10'
+set -g @continuum-boot 'on'
+set -g @continuum-restore 'on'
 
 ##### Plugins #####
 # Supports `github_username/repo` or full URL
@@ -205,25 +225,9 @@ setw -g window-status-current-format "#[fg=#3c3836,bg=#504945,nobold,nounderscor
 # git@bitbucket.cmo/user/plugin
 set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-copycat'
+# set -g @plugin 'tmux-plugins/tmux-copycat'
 # set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 run -b '~/.config/tmux/plugins/tpm/tpm'
-
-# plugin settings
-set -g @resurrect-dir '~/.config/tmux/resurrect'
-set -g @resurrect-capture-pane-contents 'on'
-set -g @resurrect-strategy-nvim 'session'
-#Restore all programs (dangerous!):
-# set -g @resurrect-processes ':all:'
-set -g @continuum-save-interval '9'
-# set -g @continuum-boot 'on'
-set -g @continuum-restore 'on'
-TMUX_FZF_OPTIONS="-d 60% -m --preview-window 'down:6:wrap:border'"
-# TMUX_FZF_PREVIEW=1
-TMUX_FZF_ORDER="session|pane|window|command|keybinding|process|clipboard"
-TMUX_FZF_PANE_FORMAT="[#{window_name}] #{pane_current_command} [#{pane_width}x#{pane_height}] #{?pane_active,[active],[inactive]}"
-TMUX_FZF_WINDOW_FORMAT="[#{window_name}] #{pane_current_command} [#{window_width}x#{window_height}] #{?window_active,[active],[inactive]}"
-TMUX_FZF_SESSION_FORMAT="[#{window_name}] #{pane_current_command} [#{session_windows} Windows] #{?pane_active,[active pane],[inactive pane]}"
