--- a/.termux/colors.properties
+++ b/.termux/colors.properties
@@ -3,13 +3,13 @@
 # Configured
 background=#000000
 foreground=#ebdbb2
-cursor=#fcecc3
+cursor=#fbf4c1
 
 color0=#1d2021
 color1=#cc241d
 color2=#81971a
 color3=#d79921
-color4=#408083
+color4=#458588
 color5=#b16286
 color6=#689d6a
 color7=#a89984
