--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -21,17 +21,17 @@ extra-keys = [[ \
    {key: ESC, popup: {macro: "CTRL d", display: "exit"}}, \
    {key: ALT, popup: {macro: "ALT R ENTER", display: "rng→"}}, \
    {key: CTRL, popup: {macro: "CTRL _", display: "hist ↢"}}, \
-   {key: '-', popup: '|'}, \
    {key: LEFT, popup: HOME}, \
-   {key: RIGHT, popup: END}, \
    {key: DOWN, popup: PGDN}, \
    {key: UP, popup: PGUP}, \
+   {key: RIGHT, popup: END}, \
+   {key: '-', popup: '|'}, \
    {macro: "ALT l", display: "ls", popup: {macro: "CTRL X CTRL R", display: "^X^R"}}, \
    {key: TAB, popup: {macro: "ENTER", display: "⏎"}} \
  ]]
 
 # Termux extra keys height
-terminal-toolbar-height = 0.8
+terminal-toolbar-height = 0.9
 
 ###############
 # Colors/themes
@@ -103,7 +103,7 @@ enforce-char-based-input = true
 ### ctrl+space (for marking text in emacs) does not work on some devices
 #ctrl-space-workaround = true
 
-### Disable terminal session change toast
+### Disable terminal session change message
 disable-terminal-session-change-toast=true
 
 ### Adjust terminal transscript rows:100-50000
