and another one

--- a/.agignore
+++ b/.agignore
@@ -1,27 +1,32 @@
-.cache/
-cache/
-node_modules/
-_cacache/
-__pycache__/
 _*/
 *_/
+40E6-DFFD/.android_secure/
+_cacache*/
+__pycache__/
+.android_secure/
+buffers/
+.cache/
+cache/
+.cfg.git/
+~/.cfg.git/
+.config/micro/backups/
+.config/micro/plug/
+.config/tmux/plugins/
+completions/
+data/
+fonts/
 .git/
 .github/
-.cfg.git/
-buffers/
-micro/backups/
-micro/plug/
-ranger/plugins/
-storage/shared/Android/
-Android/data/
-.android_secure/
-40E6-DFFD/.android_secure/
-vim-easycomplete/
-undo/
-specs/
-fonts/
-*pycache*/
-completions/
-.zsh/themes/
+go-build/
+.local/share/gem/specs/
+node_modules/
 pulse/
+*pycache*/
+ranger/plugins/
 servers/
+specs/
+servers/
+undo/
+storage/shared/Android/
+undo/
+.zsh/themes/
