--- a/.config/fsh/mytheme.ini
+++ b/.config/fsh/mytheme.ini
@@ -4,67 +4,67 @@
 default          = none
 unknown-token    = 196
 commandseparator = cyan
-redirection      = none
-here-string-tri  = yellow
-here-string-text = 006
-here-string-var  = cyan,bg:21
-exec-descriptor  = yellow,bold
+redirection      = 208
+here-string-tri  = 150
+here-string-text = 72
+here-string-var  = cyan,bold,bg:21
+exec-descriptor  = yellow,bold,bg:21
 comment          = 243
-correct-subtle   = yellow
+correct-subtle   = blue
 incorrect-subtle = 196
 subtle-separator = green
 subtle-bg        = bg:21
 secondary        = default
-recursive-base   = 117
+recursive-base   = 113
 
 [command-point]
 reserved-word  = yellow
 subcommand     = yellow
 alias          = green
 suffix-alias   = green
-global-alias   = green,bg:blue,bold
+global-alias   = green,bg:24
 builtin        = green
 function       = green
 command        = green
 precommand     = green
 hashed-command = green
-single-sq-bracket = 208
-double-sq-bracket = bg:208
-double-paren   = yellow
+single-sq-bracket = 202
+double-sq-bracket = 208
+double-paren      = black,bg:202
 
 [paths]
 path          = blue
 pathseparator =
-path-to-dir   = blue,bold
+path-to-dir   = 12
 globbing      = magenta
-globbing-ext  = magenta,bold
+globbing-ext  = 14
 
 [brackets]
-paired-bracket  = underline,bg:242
-bracket-level-1 = 202,bold
-bracket-level-2 = 208,bold
-bracket-level-3 = yellow,bold
+paired-bracket  = 202,underline,bg:244
+bracket-level-1 = 208
+bracket-level-2 = 214
+bracket-level-3 = 202
 
 [arguments]-
-single-hyphen-option   = cyan
-double-hyphen-option   = cyan
-back-quoted-argument   = none,bold
+single-hyphen-option   = cyan,bold
+double-hyphen-option   = cyan,bold
+back-quoted-argument   = cyan
 single-quoted-argument = green
 double-quoted-argument = green
-dollar-quoted-argument = 73
-optarg-number          = 123
-optarg-string          = 110
+dollar-quoted-argument = green
+optarg-number          = magenta,bold
+optarg-string          = yellow
 
 [in-string]
 ; backslash in $'...'
-back-dollar-quoted-argument           = 172
+back-dollar-quoted-argument           = 208
 ; backslash or $... in "..."
 back-or-dollar-double-quoted-argument = 208
 
 [other]
-variable             = 115
-assign               = none
-assign-array-bracket = green,bold
+variable             = 113
+assign               = cyan
+assign-array-bracket = cyan
 history-expansion    = blue
 
 [math]
@@ -73,14 +73,14 @@ mathnum = magenta,bold
 matherr = 196
 
 [for-loop]
-forvar = yellow
+forvar = 202
 fornum = magenta,bold
 ; operator
-foroper = yellow
+foroper = cyan
 ; separator
-forsep = yellow,bold
+forsep = 109
 
 [case]
 case-input       = green
-case-parentheses = yellow
-case-condition   = bg:blue,bold
+case-parentheses = cyan,bold
+case-condition   = bg:blue
