--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,7 +6,6 @@ set -g  default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:RGB"
 
 # Cursor shape (ssh)
-# set -g  xterm-keys on
 # set -ga terminal-overrides ",screen*:Ss=^[[%p1%d q:Se=^[[2 q"
 
 # Set the base index for windows to 1 instead 0
@@ -39,12 +38,11 @@ set -g  focus-events on
 
 # enable terminal clipboard instead of external
 # set -g set-clipboard on
-
 set -g  buffer-limit 20
 
-set -g  history-limit 5000
-set -g  display-time 3000
-set -g  display-panes-time 2000
+set -g  history-limit 6000
+set -g  display-time 4000
+set -g  display-panes-time 3000
 set -g  status-interval 5
 setw -g clock-mode-colour colour4
 
@@ -65,15 +63,10 @@ setw -g xterm-keys on
 
 # C-b is not acceptable -- Vim uses it
 # set -g prefix2 C-z
+set -g prefix2 none
 unbind-key C-b
 set -g prefix C-a
 bind C-a  send-prefix
-
-# -- buffers --
-# unbind p
-bind b    list-buffers  # list paste buffers
-bind p    paste-buffer  # paste from the top buffer
-bind P    choose-buffer # choose paste buffer
 
 # splitting panes with | and -
 bind |    split-window -h
@@ -94,15 +87,12 @@ bind -r L resize-pane -R 2
 # maximize current pane
 bind + run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
 
-# bind >    swap-pane -D
-# bind <    swap-pane -U
-# bind <    swap-window -d -t -1 # -t :-
-# bind >    swap-window -d -t +1 # -t :+
-
-bind -r p previous-window
+# bind -r p previous-window
+bind Tab  previous-window
 bind -r n next-window
-bind a    new-window
-bind Tab  last-window
+bind a    last-window
+bind C-k  unlink-window -k
+
 bind k    kill-pane
 bind C-q  kill-session
 bind Q    kill-session
@@ -110,7 +100,7 @@ bind Q    kill-session
 # create session
 bind C-c  new-session
 
-bind l    switch-client -l
+bind C-l  switch-client -l
 
 # find session
 bind C-f  command-prompt -p find-session 'switch-client -t %%'
@@ -127,6 +117,12 @@ bind -T copy-mode-vi v send -X begin-selection
 ## y to vi-like yank (copy to buffer)
 # bind -T copy-mode-vi y send -X copy-selection-no-clear
 bind -T copy-mode-vi y send -X copy-pipe-no-clear 'termux-clipboard-set'
+
+# -- buffers --
+# unbind p
+bind b    list-buffers  # list paste buffers
+bind p    paste-buffer  # paste from the top buffer
+bind P    choose-buffer # choose paste buffer
 
 # mouse support for copymode
 bind -n MouseDrag1Pane copy-mode -M
@@ -184,38 +180,29 @@ bind r source-file /data/data/com.termux/files/home/.config/tmux/tmux.conf \; di
 set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
-set -g message-command-style "fg=#dbcba2,bg=#504945"
+set -g message-command-style "fg=#ebdbb2,bg=#3c3836"
 set -g status-right-style "none"
-set -g pane-active-border-style "fg=#7c6f64"
-set -g status-style "none,bg=#3c3836"
-set -g message-style "fg=#dbcba2,bg=#504945"
-set -g pane-border-style "fg=#3c3836"
+set -g pane-active-border-style "fg=#83a598"
+set -g status-style "none,bg=#282828"
+set -g message-style "fg=#ebdbb2,bg=#3c3836"
+set -g pane-border-style "fg=#504945"
 set -g status-right-length "100"
 set -g status-left-length "100"
-setw -g window-status-activity-style "underscore,fg=#a89984,bg=#3c3836"
+setw -g window-status-activity-style "fg=#a89984,bg=#282828"
 setw -g window-status-separator ""
-setw -g window-status-style "none,fg=#a89984,bg=#3c3836"
-set -g status-left "#[fg=#a89984,bg=#3c3836] #S:#P#[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#504945,bg=#3c3836,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#504945] C:#{continuum_status} #[fg=#7c6f64,bg=#504945]#[bg=#7c6f64,fg=#32302f] %R "
-setw -g window-status-format "#[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]#[default] #I:#W #[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#3c3836,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ebdbb2,bg=#504945] #I:#W #[fg=#504945,bg=#3c3836,nobold,nounderscore,noitalics]"
+setw -g window-status-style "none,fg=#a89984,bg=#282828"
+set -g status-left "#[fg=#1d2021,bg=#83a598] #S  #P #[fg=#83a598,bg=#282828,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#504945,bg=#282828,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#504945]#{prefix_highlight}#[fg=#a89984,bg=#504945] #{continuum_status} #[fg=#7c6f64,bg=#504945]#[bg=#7c6f64,fg=#282828] %R "
+setw -g window-status-format "#[fg=#282828,bg=#282828,nobold,nounderscore,noitalics]#[default] #I:#W #[fg=#282828,bg=#282828,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#282828,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ebdbb2,bg=#504945] #I:#W #[fg=#504945,bg=#282828,nobold,nounderscore,noitalics]"
 
-TMUX_FZF_OPTIONS="-d 60% -m --preview-window 'down:50%:wrap:border'"
-# TMUX_FZF_PREVIEW=1
+# TMUX_FZF_OPTIONS="-d 50% --preview-window 'down:50%:wrap'"
+TMUX_FZF_OPTIONS="-p -h 65% -w 80% --preview-window=30%,nohidden,wrap"
+TMUX_FZF_PREVIEW=1
 TMUX_FZF_ORDER="session|pane|window|command|keybinding|process|clipboard"
 TMUX_FZF_PANE_FORMAT="[#{window_name}] #{pane_current_command} [#{pane_width}x#{pane_height}] #{?pane_active,[active],[inactive]}"
 TMUX_FZF_WINDOW_FORMAT="[#{window_name}] #{pane_current_command} [#{window_width}x#{window_height}] #{?window_active,[active],[inactive]}"
 TMUX_FZF_SESSION_FORMAT="[#{window_name}] #{pane_current_command} [#{session_windows} Windows] #{?pane_active,[active pane],[inactive pane]}"
-
-# plugin settings
-set -g @resurrect-dir '~/.config/tmux/resurrect'
-set -g @resurrect-capture-pane-contents 'on'
-set -g @resurrect-strategy-nvim 'session'
-#Restore all programs (dangerous!):
-# set -g @resurrect-processes ':all:'
-set -g @continuum-save-interval '10'
-set -g @continuum-boot 'on'
-set -g @continuum-restore 'on'
 
 ##### Plugins #####
 # Supports `github_username/repo` or full URL
@@ -225,9 +212,42 @@ set -g @continuum-restore 'on'
 # git@bitbucket.cmo/user/plugin
 set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-copycat'
-# set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
+# plugin settings
+set -g @resurrect-dir '~/.config/tmux/resurrect'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-processes '"nvim->nvim +SLoad"'
+#Restore all programs (dangerous!):
+# set -g @resurrect-processes ':all:'
+
+set -g @continuum-boot 'on'
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '10'
+set -g @prefix_highlight_fg 'cyan,bold' # default is 'colour231'
+set -g @prefix_highlight_bg '#504945'  # default is 'colour04'
+set -g @prefix_highlight_empty_prompt '...'          # default is '' (empty char)
+set -g @prefix_highlight_empty_attr 'fg=#a89984,bg=#504945' # default is 'fg=default,bg=default'
+# set -g @prefix_highlight_prefix_prompt 'Wait'
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_prompt 'Copy'
+set -g @prefix_highlight_copy_mode_attr 'fg=yellow,bold,bg=#504945' # default is 'fg=default,bg=yellow'
+set -g @prefix_highlight_show_sync_mode 'on'
+set -g @prefix_highlight_sync_prompt 'Sync'
+set -g @prefix_highlight_sync_mode_attr 'fg=magenta,bold,bg=#504945' # default is 'fg=default,bg=yellow'
+# set -g @prefix_highlight_empty_has_affixes 'on' # default is 'off'
+# set -g @prefix_highlight_output_prefix ' '
+# set -g @prefix_highlight_output_suffix ' '
+
+# auto install tpm
+if "test ! -d ~/.config/tmux/plugins/tpm" \
+  "run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm &&
+  ~/.config/tmux/plugins/tpm/bin/install_plugins'"
+
 run -b '~/.config/tmux/plugins/tpm/tpm'
