--- a/.termux/colors.properties
+++ b/.termux/colors.properties
@@ -3,11 +3,11 @@
 # Configured
 background=#000000
 foreground=#ebdbb2
-cursor=#fbf4c1
+# cursor=#fbf4c1
 
 color0=#1d2021
 color1=#cc241d
-color2=#81971a
+color2=#91971a
 color3=#d79921
 color4=#458588
 color5=#b16286
@@ -15,7 +15,7 @@ color6=#689d6a
 color7=#a89984
 color8=#928374
 color9=#fa3823
-color10=#a1b520
+color10=#a8ab20
 color11=#fabd2f
 color12=#83a098
 color13=#d3869b
